# bsvibe-app

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  alembic.ini  mypy.ini  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: post-create.sh
.github/workflows/: ci.yml
apps/pwa/: .gitignore  biome.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
backend/: __init__.py  config.py
backend/accounts/: __init__.py  account_models.py  account_service.py  models.py  repository.py  schemas.py  service.py
backend/api/: __init__.py  deps.py  health.py  main.py  middleware.py  oauth.py  redis_client.py  webhooks.py
backend/auth/: __init__.py  client.py
backend/channels/: __init__.py  _core.py  _events.py  registry.py
backend/common/: __init__.py  bytesize.py  clamp.py  factorial.py  ttl_cache.py
backend/connectors/: __init__.py  approval_callback.py  catalog.py  db.py  discord_callback.py  handshake.py  hidden.py  kinds.py  resolver.py  slack_callback.py  telegram_callback.py
backend/data/: __init__.py  models.py  pii.py  rls.py  scoping.py  session.py
backend/delivery/: __init__.py  compensation.py  connector_dispatch.py  db.py  dispatcher.py  safe_mode_compensation_hook.py  safe_mode_expiry.py  safe_mode_queue.py  schema.py
backend/dispatch/: __init__.py  adapter.py  caller_registry.py  resolver.py
backend/embedding/: __init__.py  authoring.py  column.py  db.py  provider.py  repository.py  serialization.py  service.py
backend/execution/: __init__.py  _executor_protocol.py  action_danger.py  advisory_lock.py  audit_events.py  brief.py  connector_actions.py  db.py  deliverables.py  directions.py  handoff.py  knowledge_orchestrator.py  loop_llm.py  orchestrator.py  repo_deps.py  run_attempt_executor.py  run_attempts.py  state_machine.py  tenant_context.py  verification.py  verified_deliverable.py  work_steps.py
backend/executors/: __init__.py  coordinator.py  db.py  dispatch.py  orchestrator.py  prompt.py  service.py  terminal.py  verify_handoff.py
backend/extensions/: __init__.py
backend/gateway/: __init__.py  dispatch.py  llm_client.py
backend/identity/: __init__.py  db.py  oauth_clients_service.py  oauth_db.py  oauth_jwt.py  oauth_keys.py  oauth_pkce.py  oauth_service.py  output_language.py  roles.py  service.py  workspaces_db.py
backend/intake/: __init__.py  db.py  decision_resolution.py  direct.py  idempotency.py  receive.py  schedule.py  schedule_db.py  schema.py  webhook.py
backend/knowledge/: __init__.py  facade.py  factory.py
backend/mcp/: __init__.py  api.py  auth.py  lifespan.py  principal.py  server.py  streamable_http.py
backend/notifications/: __init__.py  bindings.py  channels.py  copy.py  db.py  emit.py  notify_builders.py
backend/orchestrator/: __init__.py  agent_runner.py  frame.py  safe_mode.py  schema.py  workflow_sm.py
backend/plugins/: __init__.py  analyzer.py  base.py  context.py  decorator.py  loader.py  runner.py
backend/products/: __init__.py
backend/router/: __init__.py  dispatch.py  facade.py
backend/routing/: __init__.py  db.py  engine.py  multi_account.py  tier_default.py
backend/schedule/: __init__.py  channels.py
backend/shared/: __init__.py
backend/skills/: __init__.py  loader.py  meta.py  runner.py  tool_binding.py
backend/storage/: __init__.py  artifact_store.py  product_workspace.py
backend/supervisor/: __init__.py
backend/util/: textcase.py
backend/workers/: __init__.py  __main__.py  agent_worker.py  base.py  db.py  delivery_worker.py  emit.py  executor_dispatch.py  intake_worker.py  relay_worker.py  relays.py  run.py  schedule_runner.py  settle_worker.py  stream_keys.py  streams.py  verifier_worker.py
backend/workflow/: __init__.py  channels.py
backend/workspaces/: __init__.py  db.py  resource_bindings.py
bsvibe_sdk/: README.md  pyproject.toml
bsvibe_sdk/bsvibe_sdk/: __init__.py  action.py  context.py  event.py  plugin.py  version.py  webhook.py
bsvibe_sdk/tests/: __init__.py  test_import_trigger.py  test_public_api.py  test_webhook_hook.py
deploy/: .env.prod.example  Dockerfile.backend  Dockerfile.pwa  Dockerfile.sandbox  Dockerfile.sandbox-dind  README.md  compose.prod.yaml  compose.yaml  entrypoint.sh  sandbox-dind-firewall.sh
docs/architecture/: INVARIANTS.md
docs/e2e/: connector-connect-busy-checklist.md  connector-reconnect-oauth-checklist.md  e35-opencode-directory-checklist.md  executor-chat-tools-off-checklist.md  executor-claude-oauth-autorefresh-checklist.md  executor-really-gets-its-tools-checklist.md  gdpr-export-real-canon-checklist.md  graph-retraction-tombstone-checklist.md  j2-inline-executor-parity-checklist.md  kg-lift5-local-graph-checklist.md  knowledge-correct-honest-checklist.md  l1-direct-question-answer-first-checklist.md  l10-direct-ask-checklist.md  l2-run-retry-checklist.md  l3-safe-mode-toggle-checklist.md  l8-decision-titles-checklist.md  l9-run-control-checklist.md  nl-routing-n1-checklist.md  orphan-runs-discard-cascade-checklist.md  production-tier-rls-checklist.md  r1-report-narrative-checklist.md  r10-knowledge-split-checklist.md  r11-report-knowledge-fixes-checklist.md  r12-note-viewer-checklist.md  r13-concept-links-checklist.md  r16-concept-centric-references-checklist.md  r17-product-page-checklist.md  r18-mobile-fixes-checklist.md  r2b-learned-checklist.md  r3-report-redesign-checklist.md  r7-brief-cards-checklist.md  r8-report-fixes-checklist.md  r9-proposals-brief-checklist.md  (+13 more)
plugin/: __init__.py
tests/: README.md  _bsvibe_independent_acceptance.py  _support.py  conftest.py  test_alembic_fresh.py  test_alembic_parse.py  test_bundle1_imports.py  test_context_docstring_contract.py  test_decision_ratchet_cross_run_e2e.py  test_dunder_all_coverage.py  test_health.py  test_import_contracts.py  test_knowledge_accumulation_e2e.py  test_knowledge_utilization_e2e.py  test_no_module_level_mutable_globals.py  test_semantic_search_e2e.py  test_smoke.py  test_textcase.py
tools/: build-sandbox-image.sh
(+1731 files in other folders)
