[project]
name = "bsvibe-app"
version = "0.1.0"
description = "BSVibe AI agent OS — unified monorepo (PWA + FastAPI backend)"
license = { text = "BSL-1.1" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2.5",
    "structlog>=24",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.9",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5",
    "jsonschema>=4",
    "cryptography>=42",
    "pgvector>=0.3.0",
    "networkx>=3",
    "pyyaml>=6",
    "mcp>=1",
    "aiosqlite>=0.20",
    "litellm>=1.50",
    # Lift S — plugin SDK at repo root, consumed via uv workspace.
    "bsvibe-sdk",
]

[tool.uv.sources]
bsvibe-sdk = { workspace = true }

[tool.uv.workspace]
members = ["bsvibe_sdk"]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "anyio>=4",
    "respx>=0.21",
    "types-jsonschema>=4",
    "aiosqlite>=0.20",
    "fakeredis>=2.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Lift R1 — connector plugins moved to repo-root ``plugin/<name>/`` and ship
# their own ``tests/`` subtree. Discover those alongside the central
# ``tests/`` suite so each plugin remains a self-contained unit.
testpaths = ["plugin", "tests"]
addopts = "-ra"

[tool.coverage.run]
# Lift R1 — connector plugins live at repo-root ``plugin/<name>/`` and ship
# their own ``tests/`` subtree; include them in coverage so the 80% gate
# reflects post-relocation reality.
source = ["backend", "plugin"]
omit = [
    "backend/*/migrations/*",
]
