[project]
name = "bsvibe-app"
version = "0.1.0"
description = "BSVibe AI agent OS — unified monorepo (PWA + FastAPI backend)"
license = { text = "BSL-1.1" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2",
    "pydantic-settings>=2.5",
    "structlog>=24",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.9",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "redis>=5",
    "jsonschema>=4",
    "cryptography>=42",
    "pgvector>=0.3.0",
    "networkx>=3",
    "pyyaml>=6",
    "mcp>=1",
    "aiosqlite>=0.20",
    "litellm>=1.50",
    # Lift E20 — Graphify-inspired code-graph ingest. ``pathspec`` powers
    # the ``.gitignore`` filter in BootstrapFileFilter; ``tree-sitter`` +
    # ``tree-sitter-language-pack`` extract deterministic AST nodes/edges
    # from Python/TypeScript/JavaScript/Markdown without an LLM call per
    # file; ``python-igraph`` runs Leiden community detection on the
    # NetworkX graph before LLM synthesis fans out per community.
    "pathspec>=0.12",
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.4",
    "python-igraph>=0.11",
    # NetworkX's pagerank uses scipy's sparse linear algebra; we need
    # it to rank nodes inside each community before LLM synthesis.
    "scipy>=1.13",
    # Lift S — plugin SDK at repo root, consumed via uv workspace.
    "bsvibe-sdk",
]

[project.scripts]
# Lift E4 — GitHub-Actions-runner-style worker UX. ``bsvibe login`` runs the
# PKCE loopback flow on the founder's host; ``bsvibe-worker register`` reads
# the resulting credential and registers a worker against the backend.
bsvibe = "backend.executors.worker.cli:run_bsvibe_cli"
bsvibe-worker = "backend.executors.worker.cli:run_bsvibe_worker_cli"

[tool.uv.sources]
bsvibe-sdk = { workspace = true }

[tool.uv.workspace]
members = ["bsvibe_sdk"]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "anyio>=4",
    "respx>=0.21",
    "types-jsonschema>=4",
    "aiosqlite>=0.20",
    "fakeredis>=2.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "import-linter>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Lift R1 — connector plugins moved to repo-root ``plugin/<name>/`` and ship
# their own ``tests/`` subtree. Discover those alongside the central
# ``tests/`` suite so each plugin remains a self-contained unit.
testpaths = ["plugin", "tests"]
addopts = "-ra"

[tool.coverage.run]
# Lift R1 — connector plugins live at repo-root ``plugin/<name>/`` and ship
# their own ``tests/`` subtree; include them in coverage so the 80% gate
# reflects post-relocation reality.
source = ["backend", "plugin"]
omit = [
    "backend/*/migrations/*",
]

# Lift N defensive pattern #2 / #9 (v8 §22 / D45) — import-linter contracts.
#
# These contracts pin the architectural invariants that survived through
# Lift J + Lift L: SDK isolation, common-leaf one-way dependency, plugin
# allow-list, and the cross-context boundary direction. They run as a
# **critical** CI gate (test-mode-independent — invariant #10) alongside
# ruff + mypy in ``.github/workflows/ci.yml``.
#
# Tighter contracts (cross-context-only-via-application, no-SQLAlchemy
# in application/) are deferred to the N-Coverage follow-up — they
# require call-site refactors that Lift N foundation does not own.
[tool.importlinter]
root_packages = ["backend", "bsvibe_sdk", "plugin"]
include_external_packages = false

[[tool.importlinter.contracts]]
name = "bsvibe_sdk has zero backend / plugin imports"
type = "forbidden"
source_modules = ["bsvibe_sdk"]
forbidden_modules = ["backend", "plugin"]

[[tool.importlinter.contracts]]
# Common-leaf modules are pure infrastructure (JWT/RBAC, logging, env
# config, DB session factory). They may NOT depend on any bounded
# context — that direction belongs to the contexts themselves. Lift N
# documents two pre-existing leaks (storage/product_workspace.py and
# connectors/resolver.py) as ``ignore_imports`` exceptions; cleanup
# scheduled for the N-Coverage follow-up.
name = "common leaves do not import bounded contexts"
type = "forbidden"
source_modules = [
    "backend.shared",
    "backend.data",
    "backend.auth",
    "backend.embedding",
    "backend.notifications",
    "backend.workers",
]
forbidden_modules = [
    "backend.router",
    "backend.knowledge",
    "backend.workflow",
    "backend.identity",
    "backend.schedule",
    "backend.extensions",
    "backend.executors",
    "backend.api",
]
ignore_imports = [
    # ``backend.workers`` is a thin entry-point shim — its ``__main__``
    # and ``relays`` modules deliberately import workflow workers as the
    # production worker daemon's bootstrap site. The leaf invariant is
    # held by ``base.py`` / ``db.py`` / ``emit.py`` / ``streams.py``.
    "backend.workers.__main__ -> backend.shared.core.logging",
    "backend.workers.__main__ -> backend.workflow.infrastructure.workers.run",
    "backend.workers.relays -> backend.workflow.infrastructure.workers.relay_worker",
    "backend.workers.relays -> backend.workflow.infrastructure.workers.run",
    # Alembic env.py imports every context's SQLAlchemy models so they
    # register on the shared ``Base.metadata`` for autogenerate. This is
    # the canonical Alembic pattern — there is no "domain" version of it.
    "backend.data.migrations.env -> backend.executors.db",
    "backend.data.migrations.env -> backend.identity.db",
    "backend.data.migrations.env -> backend.identity.oauth_db",
    "backend.data.migrations.env -> backend.identity.workspaces_db",
    "backend.data.migrations.env -> backend.knowledge.canonicalization.db",
    "backend.data.migrations.env -> backend.knowledge.infrastructure.ontology_db",
    "backend.data.migrations.env -> backend.knowledge.ingest.db",
    "backend.data.migrations.env -> backend.knowledge.retrieval.db",
    "backend.data.migrations.env -> backend.router.accounts.account_models",
    "backend.data.migrations.env -> backend.router.accounts.models",
    "backend.data.migrations.env -> backend.router.budget.models",
    "backend.data.migrations.env -> backend.router.routing.db",
    "backend.data.migrations.env -> backend.router.routing.run_routing.db",
    "backend.data.migrations.env -> backend.schedule.infrastructure.schedule_db",
    "backend.data.migrations.env -> backend.workflow.infrastructure.db",
    "backend.data.migrations.env -> backend.workflow.infrastructure.delivery.db",
    "backend.data.migrations.env -> backend.workflow.infrastructure.intake.db",
]

[[tool.importlinter.contracts]]
# Lift Q3 / R2c — the engine inbound layer must NOT reach into plugin
# webhook modules. Parsers are dispatched through
# ``backend.extensions.plugin.webhook_registry.WebhookParserRegistry``
# which the loader populates from ``@bsvibe_sdk.webhook(...)`` markers.
# ``plugin.audit`` is the lone in-tree transactional-outbox subscriber
# (whitelisted in the "connector plugins only depend on..." contract
# above) — and these two engine modules never imported it; if they ever
# do, this gate surfaces it as the reverse-direction violation it is.
name = "engine inbound layer has zero plugin imports (R2c)"
type = "forbidden"
source_modules = [
    "backend.connectors.resolver",
    "backend.api.webhooks",
]
forbidden_modules = ["plugin"]

[[tool.importlinter.contracts]]
# Plugins may depend on the SDK + a small allow-list of backend
# **published** seams (extensions/plugin for SkillContext + capability
# decorators, workflow.domain for TriggerEvent, extensions.eventbus for
# pub-sub). They must NOT depend on any other context — that would
# invert the direction-of-dependency (plugins are leaves, like the SDK).
#
# ``plugin.audit`` predates the v8 plugin discipline (it's an in-tree
# transactional-outbox subscriber, not a connector); its existing
# back-channels are whitelisted and tracked as the N-Coverage cleanup
# candidate.
name = "connector plugins only depend on bsvibe_sdk + published seams"
type = "forbidden"
source_modules = [
    "plugin.claude",
    "plugin.discord",
    "plugin.email_sender",
    "plugin.github",
    "plugin.gpt",
    "plugin.linear",
    "plugin.notion",
    "plugin.obsidian",
    "plugin.sentry",
    "plugin.slack",
    "plugin.telegram",
    "plugin.trello",
]
forbidden_modules = [
    "backend.router",
    "backend.knowledge",
    "backend.identity",
    "backend.schedule",
    "backend.executors",
    "backend.api",
    "backend.shared",
    "backend.data",
    "backend.auth",
    "backend.embedding",
    "backend.notifications",
    "backend.workers",
    "backend.storage",
    "backend.connectors",
    "backend.workflow.infrastructure",
    "backend.workflow.application",
    "backend.extensions.skill",
    "backend.extensions.eventbus",
]

[[tool.importlinter.contracts]]
# Lift D2 — the embedded MCP context (``backend.mcp``) is a leaf surface
# that depends ONLY on:
#   * Identity (OAuth JWT verification + workspace lookup, including the
#     workspaces_db SQLModel for ProductRow / WorkspaceRow lookups)
#   * Workflow domain repositories + a few domain model + service entrypoints
#     (Direct trigger, SafeModeQueue, repo facades, db models)
#   * Knowledge facade primitives (Vault path read)
#   * Common leaves (config, shared, data, workers.emit for Redis fan-out)
# It must NOT reach into other contexts' private modules — that would mean
# an MCP tool reaches across a context boundary the REST surface doesn't.
# ``backend.router`` (model routing), ``backend.executors`` (worker farm),
# ``backend.schedule`` (cron), ``backend.extensions`` (plugin loader),
# ``backend.connectors`` (inbound dispatch), and ``backend.api`` (REST
# routers) are out-of-bounds. The allowlist above is enforced by listing
# everything else in forbidden_modules.
name = "MCP context depends only on Identity + Workflow + Knowledge + common"
type = "forbidden"
source_modules = ["backend.mcp"]
forbidden_modules = [
    "backend.router",
    "backend.schedule",
    "backend.executors",
    "backend.extensions",
    "backend.connectors",
    "backend.api",
]
ignore_imports = [
    # Connector OAuth (this branch) — the folded "Connect with X" / GitHub-App
    # setup tools live in connectors_tools and call the connector OAuth service
    # layer; ignoring this one edge cuts the whole connectors.auth subtree (and
    # its transitive router.accounts.crypto reach) from MCP's graph.
    "backend.mcp.tools.connectors_tools -> backend.connectors.auth.service",
    # Lift D3a — UI-parity setup tools (model accounts / connectors /
    # notifications). Each new tool module calls the SAME service /
    # row / kind primitives the REST surface uses so the MCP and PWA
    # paths stay one canonical mutation chain (no second copy of the
    # encryption logic, the webhook-token mint, the kind validator, the
    # inbound-import dispatcher, etc.). The exceptions are narrowly
    # scoped to the three new tool modules; the rest of backend.mcp is
    # still bound by the contract above.
    "backend.mcp.tools.model_accounts_tools -> backend.router.accounts.account_service",
    # NL-native routing N2 — intent authoring tools resolve the workspace's
    # personal account (the same axis as the REST require_account_id dep) to
    # scope intent definitions. Same account_service touch-point as
    # model_accounts_tools / account_tools above.
    "backend.mcp.tools.intents_tools -> backend.router.accounts.account_service",
    "backend.mcp.tools.model_accounts_tools -> backend.router.accounts.crypto",
    "backend.mcp.tools.model_accounts_tools -> backend.router.accounts.schemas",
    "backend.mcp.tools.model_accounts_tools -> backend.router.accounts.service",
    # Lift E1 — workspace_set_default_account tool validates the target
    # is an active ModelAccount in the same workspace before writing the
    # column. Same pattern as model_accounts_tools above; the validation
    # path goes through the router infrastructure repository so the MCP
    # write follows the same active-set semantics as the REST PATCH.
    "backend.mcp.tools.workspace_tools -> backend.router.infrastructure.repositories",
    "backend.mcp.tools.connectors_tools -> backend.api.v1.connectors",
    "backend.mcp.tools.connectors_tools -> backend.connectors.catalog",
    "backend.mcp.tools.connectors_tools -> backend.connectors.db",
    "backend.mcp.tools.connectors_tools -> backend.extensions.plugin.base",
    "backend.mcp.tools.connectors_tools -> backend.router.accounts.crypto",
    # Lift D3b — UI-parity workflow tools (bindings / decisions / routing
    # rules). Same pattern as D3a: each new tool module calls the SAME repo /
    # service primitives the REST surface uses so MCP and PWA paths stay one
    # canonical mutation chain.
    "backend.mcp.tools.bindings_tools -> backend.connectors.db",
    # Lift D3c — UI-parity Knowledge retract/correct + Skills + Workspace.
    # Same pattern as D3a/b: each new tool module calls the SAME service /
    # loader the REST surface uses so MCP and PWA paths stay one canonical
    # chain (no second copy of the skill loader, no second slug rule, no
    # second markdown renderer).
    "backend.mcp.tools.skills_tools -> backend.extensions.skill",
    # Transitive chain through plugin.audit — RetractionService emits via
    # plugin.audit.service, which pulls in plugin.audit.subscriber (which
    # imports backend.api.v1.live_events for SSE relay) + backend.extensions.eventbus
    # internally. The MCP touch-point is the application service the REST
    # surface uses; the audit pipeline is a leaf concern not under MCP's control.
    "backend.mcp.tools.knowledge_retraction_tools -> backend.knowledge.application.retraction_service",
    # Same chain — the garden read tools (list_recent/search/get_note/list_tags)
    # run RetractionService.apply_pending as a lazy resolver so a queued retract's
    # tombstone is committed on the next read (there is no background sweep). Reuses
    # the one canonical service; the transitive audit/eventbus pull-in is identical
    # to the retraction-tools exemption above.
    "backend.mcp.tools.knowledge_tools -> backend.knowledge.application.retraction_service",
    # Lift D3d — UI-parity Inside Trust + Account read-only tools. The
    # account-get tool calls the SAME ``ensure_personal_account`` service the
    # REST /api/v1/account discovery endpoint calls — one canonical
    # create-on-read chain across MCP + PWA. Inside trust uses
    # backend.workflow.application.metrics.trust_surface directly (already in
    # the allowlist — workflow.application is permitted).
    "backend.mcp.tools.account_tools -> backend.router.accounts.account_service",
    # Hotfix — UI-parity for ``products_create``. The MCP path now
    # schedules the same post-commit bootstrap the REST path schedules
    # (Lift A v2). The scheduler module pulls in
    # ``account_resolution`` (workflow.application.runtime) which itself
    # depends on ``router.dispatch.strategies`` for the LLM gateway.
    # The MCP touch-point is the same scheduler entry the REST handler
    # uses — no second copy of the orchestration.
    "backend.mcp.tools.workflow_tools -> backend.workflow.application.runtime.product_bootstrap_runtime",
    # Lift E4 — UI-parity for the Settings → Workers tab (list / revoke).
    # The MCP path calls the SAME executors.service primitives the REST
    # surface uses so the founder operating through Claude Code sees an
    # identical list / revoke chain. ``executors.service`` reaches into
    # ``router.accounts`` because revoking a worker also detaches its
    # routable ``provider='executor'`` model account rows — that
    # one-step cascade lives in the service layer.
    "backend.mcp.tools.workers_tools -> backend.executors.service",
    "backend.mcp.tools.workers_tools -> backend.executors.db",
    # Lift E13 — surfacing ``heartbeat_fresh`` on the workers-list shape
    # reuses the canonical predicate from ``executors.dispatch`` (the same
    # one ``find_available_worker`` uses) instead of duplicating the cutoff
    # calc. One source of truth for "can this worker actually take work".
    "backend.mcp.tools.workers_tools -> backend.executors.dispatch",
    # Lift E7 — UI-parity for the NEW run-routing rules surface
    # (/api/v1/run-routing). Same one-canonical-mutation-chain pattern
    # as the other D3b tools: the MCP module calls the same repo
    # + engine + caller_registry the REST handler uses so MCP and PWA
    # paths land on one validation contract (no second copy of the
    # caller_id whitelist, the ALLOWED_FIELDS set, or the
    # non-default-requires-caller invariant). Reusing the REST handler's
    # ``_validate_caller_id`` keeps the helper a single source of truth.
    "backend.mcp.tools.run_routing_rules_tools -> backend.api.v1.run_routing",
    "backend.mcp.tools.run_routing_rules_tools -> backend.router.infrastructure.repositories",
    "backend.mcp.tools.run_routing_rules_tools -> backend.router.routing.run_routing.db",
    "backend.mcp.tools.run_routing_rules_tools -> backend.router.routing.run_routing.engine",
    # The compile contract's error taxonomy — the MCP tool must tell an
    # UNREACHABLE compile model (infrastructure → "couldn't reach", the REST
    # 502) apart from an uninterpretable phrase (→ "rephrase", the REST 422).
    # Same one-canonical-contract reason as the engine / db edges above: the
    # alternative is MCP re-deriving the distinction from a message string.
    "backend.mcp.tools.run_routing_rules_tools -> backend.router.routing.run_routing.nl_compile",
    # Lift N3 — the compile-apply tool resolves the personal billing account
    # (the account intents are scoped to) to persist category intent defs, the
    # same account_service touch-point account_tools + intents_tools already use.
    "backend.mcp.tools.run_routing_rules_tools -> backend.router.accounts.account_service",
    # Notifier N1a — UI-parity for notification prefs. The get/update tools now
    # surface ``available_channels`` (the workspace's notify channels, derived
    # from connector bindings) via the SAME
    # ``backend.notifications.bindings.available_channels`` the REST GET uses, so
    # MCP and PWA read one canonical channel-derivation (no second copy of the
    # binding-selection rule). That helper resolves ``connector_accounts`` rows,
    # so the tool module transitively reaches ``backend.connectors.db`` — the
    # same connectors touch-point ``connectors_tools`` / ``bindings_tools``
    # already carry. Cutting this one mcp-boundary edge removes the whole
    # notifications-bindings subtree (and its connectors reach) from MCP's graph.
    "backend.mcp.tools.notifications_tools -> backend.notifications.bindings",
]

