[project]
name = "bsvibe-sdk"
version = "0.1.0"
description = "BSVibe Plugin SDK — Protocols + decorators for writing BSVibe plugins"
license = { text = "BSL-1.1" }
requires-python = ">=3.11"
# Pure stdlib only — no FastAPI, no SQLAlchemy, no LiteLLM, no structlog.
# The SDK is the plugin-author-facing surface and must stay light.
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bsvibe_sdk"]
